--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "animated": "^0.2.2",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "react": "^19.1.0",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "weather": "^1.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
